# udo__api

./: .gitignore  CLAUDE.md  README.md  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 09150ae3af07_add_ist_geheim_to_system_setting.py  0bcab5006983_add_rechtsform_and_medien_lizenz_tables.py  0ec85ea7a1d8_add_einkaufskosten_usd_to_rch_auftrag.py  376057f71dd5_add_hersteller_fields_to_unternehmen.py  4ab994ff485f_add_merge_config_tables.py  567197f4e309_add_plugin_marketplace_tables.py  bd831a7d434a_initial_schema.py  (+14 more)
app/: __init__.py  auth.py  config.py  database.py  main.py  openapi_docs.py
docs/: insomnia_setup.md
marketing/: README.md  paket-b-branchenklassifikation.md
scripts/: analyze_legacy_db.py  create_superadmin.py  export_wertelisten.py  merge_busch_data.py  migrate_data.py  migrate_google_types.py  migrate_kontakte.py  migrate_organisation_zuordnungen.py  migrate_sqlite_to_postgres.py  recherche_worker.py  run_etl.py  seed_branchen.py  seed_favoriten.py  seed_klassifikationen.py  seed_medien_lizenzen.py  seed_prod_wertelisten.py  seed_rechtsformen.py  set_hauptorte.py  setup_color_palettes.py  setup_etl_organisation.py  setup_etl_toyware.py  setup_excel_import_ev_smartmail.py  setup_excel_import_maerklin.py  setup_excel_import_sc3_haendler.py  setup_maerklin_stammdaten.py  test_jwt_auth.py
seed/: google_mapping.json  klassifikationen_gastronomie.json  klassifikationen_unternehmenstyp.json  medien_lizenzen.json  prod_wertelisten.json  rechtsformen.json  regionale_gruppen.json  verzeichnisse.json  wz_2008_branchen.json
(+273 files in other folders)
